# NGINXDomainManager

./: .gitignore  README.md  config.yaml  domain_manager.py  logger.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  updater.py  upload_to_pypi.py
.github/workflows/: build.yml  python-app.yml  python-publish.yml
src/NGINXDomainManager/utils/: backup.py  display.py  domain.py
src/domain_manager/: _version.py  config.py  config.yaml  logger.py  main.py  updater.py
src/domain_manager/utils/: data_files.py  display.py  domain.py  fix_nginx.py  reset_configs.py  validation.py
utils/: data_files.py  display.py  domain.py  permissions.py  validation.py
