[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NGINXDomainManager"
version = "1.6.0"
description = "A tool to manage NGINX domains"
dependencies = [
    "altgraph==0.17.4",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "idna==3.10",
    "packaging==24.1",
    "pefile==2024.8.26",
    "pyinstaller==6.10.0",
    "pyinstaller-hooks-contrib==2024.8",
    "pywin32-ctypes==0.2.3",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "setuptools==75.1.0",
    "urllib3==2.2.3"
]

[tool.setuptools]
package-dir = { "" = "src" }
long_description = "file: README.md"
long_description_content_type = "text/markdown"

[tool.setuptools.packages.find]
where = ["src"]